# fastapi-locust-test

./: docker-compose.yml  fastapi.Dockerfile  locust.Dockerfile  locustfile.py  main.py  pyproject.toml
